Fixed overflow issue v2

--- a/src/components/Sections/about.css
+++ b/src/components/Sections/about.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     gap: 100px;
-    width: 100vw;
+    width: 100%;
 }
 
 .profile-main {
