--- a/src/components/Sections/skills.css
+++ b/src/components/Sections/skills.css
@@ -25,7 +25,7 @@
     left: 50%;
     transform: translateX(-50%);
     font-size: 2.5rem;
-    width: 100vw;
+    width: 100%;
     margin-bottom: 100px;
     color: var(--primary-txt-color);
     transition: 0.3s ease;
